welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: ';' expected but '(' found.
  var nums:Array[Int](num) // un joli tableau <3 //
                     ^